# snake-rs

./: Cargo.toml
src/: game.rs  main.rs  select.rs
