[package]
name = "rsnake"
version = "0.1.0"
authors = ["schulke-214 <schulkemaximilian@gmail.com>"]
edition = "2018"

[dependencies]
piston_window = "0.89.0"
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
find_folder = "0.3.0"
rand = "0.6.5"